--- a/style.css
+++ b/style.css
@@ -41,13 +41,24 @@ button {
     font-size: 2rem;
     border-radius: 10px;
     height: 40px;
+    cursor: pointer;
+}
+
+button:hover{
+    background-color:yellow;
+    transition: .6s;
+}
+
+
+.material-symbols-outlined {
+    width: auto;
+    height: 30px;
+    
 }
 main {
     width: 100%;
     width: auto;    
     text-align: center;
-    
-
 }
 
 #pokemon-container{
@@ -56,7 +67,7 @@ main {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
     width: 80%;
-    margin-right: auto;
+    margin-right: 90px;
     margin-left: auto;
     font-size: 1.5rem;
 
