--- a/style.css
+++ b/style.css
@@ -84,3 +84,13 @@ main {
     font-size: 3rem;
     color: red;
 }
+footer {
+    width: 100%;
+    height: 100px;
+}
+.text-footer{
+    text-align: center;
+    color: #2b4594;
+    font-size: 2rem;
+    margin-top: 30px;    
+}
